alteracoes no consumer

--- a/spring-kafka-consumer/src/main/resources/application.properties
+++ b/spring-kafka-consumer/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-topic-name=s5g-topic-message
-spring-kafka-bootstrap-servers=localhost:9082
+topic.name=s5g-topic-message
+spring.kafka.bootstrap.server=localhost:9092
 
 spring.kafka.group-id=consumer-api
+
+server.port=9000
